# xGPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/: normal_mapping_normal_map.dds  normal_maps-test-BC5.dds
Assets/StoneWal01_1K/: Stone Wall 01_1K_Ambient Occlusion.dds  Stone Wall 01_1K_Diffuse.dds  Stone Wall 01_1K_Glossiness.dds  Stone Wall 01_1K_Height.dds  Stone Wall 01_1K_Normal - Compress BC5.dds  Stone Wall 01_1K_Normal - Compress DXT5.dds  Stone Wall 01_1K_Roughness.dds  Stone Wall 01_1K_Specular.dds
Assets/demon-skull-textured/: Original Link.txt
Src/: xGPU.h  xgpu_buffer.h  xgpu_cmd_buffer.h  xgpu_device.h  xgpu_instance.h  xgpu_keyboard.h  xgpu_mouse.h  xgpu_pipeline.h  xgpu_pipeline_instance.h  xgpu_renderpass.h  xgpu_shader.h  xgpu_texture.h  xgpu_vertex_descriptor.h  xgpu_window.h
Src/Details/: xgpu_buffer_inline.h  xgpu_cmd_buffer_inline.h  xgpu_device_inline.h  xgpu_instance_inline.h  xgpu_keyboard_inline.h  xgpu_mouse_inline.h  xgpu_pipeline_inline.h  xgpu_pipeline_instance_inline.h  xgpu_shader_inline.h  xgpu_texture_inline.h  xgpu_texture_instance_inline.h  xgpu_vertex_descriptor_inline.h  xgpu_window_inline.h
Src/Details/Vulkan/: xgpu_vulkan.cpp  xgpu_vulkan.h  xgpu_vulkan_buffer.cpp  xgpu_vulkan_buffer.h  xgpu_vulkan_device.cpp  xgpu_vulkan_device.h  xgpu_vulkan_instance.cpp  xgpu_vulkan_instance.h  xgpu_vulkan_local_storage.cpp  xgpu_vulkan_pipeline.cpp  xgpu_vulkan_pipeline.h  xgpu_vulkan_pipeline_instance.cpp  xgpu_vulkan_pipeline_instance.h  xgpu_vulkan_renderpass.cpp  xgpu_vulkan_shader.cpp  xgpu_vulkan_shader.h  xgpu_vulkan_texture.cpp  xgpu_vulkan_texture.h  xgpu_vulkan_vertex_descriptor.cpp  xgpu_vulkan_vertex_descriptor.h  xgpu_vulkan_window.cpp  xgpu_vulkan_window.h
Src/Examples/: Examples.h  main.cpp
Src/Examples/E01_Initialize/: E01_Initialize.cpp
Src/Examples/E02_UsingUtilities/: E02_UsingTools.cpp
Src/Examples/E03_ImguiBreatch/: E03_ImguiBreach.cpp
Src/Examples/E04_Properties/: E04_Properties.cpp  my_properties.h  xPropertyImGuiExample.h  xPropertyImGuiInspector.cpp  xPropertyImGuiInspector.h
Src/Examples/E05_Textures/: Alita-DXT5.dds  E05_BitmapInspector.h  E05_Textures.cpp
Src/Examples/E06_AssimLoader/: E06_AssimLoader.cpp  E06_LoadTextureHelper.h  Mesh.h  ModelLoader.cpp  ModelLoader.h
Src/Examples/E07_PrimitiveGeoms/: E07_PrimitiveGeoms.cpp
Src/Examples/E08_AsyncTextureLoading/: E08_AsyncTextureLoading.cpp
Src/Examples/E09_Raw3DViewer/: E09_Raw3DViewer.cpp
Src/Examples/E10_BasisUniversal/: E10_BasisUniversal.cpp
Src/Examples/E10_TextureResourcePipeline/: E10_AssetBrowser.h  E10_AssetManagerContext.h  E10_AssetMgr.h  E10_Compiler.h  E10_PluginMgr.h  E10_Resources.h  E10_TextureResourcePipeline.cpp  E10_asset_browser_compiler_tab.h  E10_asset_browser_search_tab.h  E10_asset_browser_virtual_tree_tab.h  e10_2d_cube_vert.glsl  e10_2d_frag.glsl  e10_2d_vert.glsl  e10_3d_cube_frag.glsl  e10_3d_frag.glsl  e10_3d_vert.glsl  e10_frag.glsl  e10_vert.glsl
Src/Examples/E11_NormalMaps/: E11_NormalMaps.cpp  E11_frag_btn.glsl  E11_vert_btn.glsl
Src/Examples/E12_Lighting/: E12_Ligting.cpp  E12_frag_lighting.glsl  E12_vert_lighting.glsl
Src/Examples/E13_ParallaxOcclusionMapping/: E13_POM.cpp  E13_POM_frag.glsl  E13_POM_vert.glsl
Src/Examples/E14_PhysicalBasedRendering/: E14_PBR.cpp  E14_PBR_frag.glsl
Src/Examples/E15_Shadowmap/: E15_Shadowmap.cpp  E15_ShadowmapGeneration_vert.glsl  E15_ShadowmapLighting_frag.glsl  E15_ShadowmapLighting_vert.glsl
Src/Examples/E16_Animation/: E16_AnimCharacter.h  E16_AnimationExample.cpp  E16_AnimationPackage.h  E16_Importer.h  E16_Skeleton.h  E16_SkinGeom.h  e16_skingeom_vert.glsl
Src/Examples/E17_FullSkin/: E17_FullSkinExample.cpp
Src/Examples/E18_QuantizeSkinVertex/: E18_QuantizeSkinVertex.cpp  e18_quantize_skingeom_vert.glsl
Src/Examples/Settings/: PropertyConfig.h
Src/Tutorials/: Tutorials.h  main.cpp
Src/Tutorials/E03_ImguiBreatch/: E03_ImguiBreach.cpp
Src/Tutorials/E04_Properties/: E04_Properties.cpp
Src/Tutorials/E05_Textures/: Alita-DXT1-Mipmaps.dds  Alita-FullColor-Mipmaps.dds  Alita-FullColor.dds  Alita-FullColorNoAlpha-Mipmaps.dds  E05_Textures.cpp
Src/Tutorials/E06_AssimLoader/: E06_AssimLoader.cpp  ModelLoader.cpp
Src/Tutorials/E07_PrimitiveGeoms/: E07_PrimitiveGeoms.cpp
Src/Tutorials/Settings/: PropertyConfig.h  xcore_user_settings.h
Src/Tutorials/T01_Initialize/: T01_Initialize.cpp
Src/Tutorials/T02_UsingUtilities/: T02_UsingTools.cpp
Tools/: xgpu_basis_universal_texture_loader.h  xgpu_imgui_breach.cpp  xgpu_imgui_breach.h  xgpu_view.h  xgpu_view_inline.h  xgpu_vtk2_texture_loader.h  xgpu_xcore_bitmap_helpers.h
Tools/Import3D/: import3d.h  import3d_animation.h  import3d_geom.h  import3d_skeleton.h
Tools/WindowsFileDialog/: FileBrowser.cpp  FileBrowser.h  FolderBrowser.cpp  FolderBrowser.h
source/: xGPU.cpp  xGPU.h  xgpu_buffer.h  xgpu_cmd_buffer.h  xgpu_device.h  xgpu_mouse.h  xgpu_pipeline.h  xgpu_pipeline_instance.h  xgpu_renderpass.h  xgpu_texture.h  xgpu_vertex_descriptor.h  xgpu_window.h
source/Details/: xgpu_buffer_inline.h  xgpu_cmd_buffer_inline.h  xgpu_device_inline.h  xgpu_keyboard_inline.h  xgpu_pipeline_inline.h  xgpu_pipeline_instance_inline.h  xgpu_renderpass_inline.h  xgpu_texture_inline.h  xgpu_window_inline.h
source/Details/System/: xgpu_system.cpp  xgpu_system.h
source/Details/Vulkan/: xgpu_vulkan.cpp  xgpu_vulkan.h  xgpu_vulkan_buffer.cpp  xgpu_vulkan_buffer.h  xgpu_vulkan_descriptor_pool_ring.h  xgpu_vulkan_device.cpp  xgpu_vulkan_device.h  xgpu_vulkan_instance.h  xgpu_vulkan_local_storage.cpp  xgpu_vulkan_local_storage.h  xgpu_vulkan_pipeline.cpp  xgpu_vulkan_pipeline.h  xgpu_vulkan_pipeline_instance.cpp  xgpu_vulkan_pipeline_instance.h  xgpu_vulkan_renderpass.cpp  xgpu_vulkan_renderpass.h  xgpu_vulkan_shader.cpp  xgpu_vulkan_shader.h  xgpu_vulkan_texture.cpp  xgpu_vulkan_texture.h  xgpu_vulkan_window.cpp  (+3 more)
source/Examples/: Examples.h  main.cpp
source/Tools/: xgpu_basis_universal_texture_loader.h  xgpu_imgui_breach.cpp  xgpu_imgui_breach.h  xgpu_view.h  xgpu_view_inline.h  xgpu_xcore_bitmap_helpers.h
(+87 files in other folders)
